--- a/characters.html
+++ b/characters.html
@@ -3,11 +3,11 @@
         <Head>
             <title>Characters</title>
                 <meta charset="UTF-8">
-                <link rel="stylesheet" href="styles.css">
+                <link rel="stylesheet" href="public/styles/styles.css">
         </Head>
             <div class="header">
                 <a href="homepage.html">
-                    <img src="photos/Exxtra_Ranch_Logo.png"
+                    <img src="public/images/Exxtra_Ranch_Logo.png"
                     width="250" height="98">
                 </a>               
                  <div class="navbar">
@@ -41,7 +41,7 @@
             <h4>Little spray paint fun: <em>Long Beach Ca 2020</em></h4>
             <h5><em>Spray paint on wood</em></h5>
         </div>
-            <img src="photos/bigeyes.jpg">
+            <img src="public/images/bigeyes.jpg">
                 <p class="characters-p">Little backstory on this guy, I went over to my buddy's house to watch
                  the fights and I saw he had a bunch of spray paint in the barn/shed,
                  and I asked if he would let me paint a little somethin somethin. He said run it!
@@ -53,7 +53,7 @@
             <h4>The couple: <em>Orange Ca 2019</em></h4>
             <h5><em>Acrylic on Canvas</em></h5>
         </div>
-            <img src="photos/couple.jpg">
+            <img src="public/images/couple.jpg">
                 <p class="characters-p">Back when I was 18, I met this kid when I was taking my insurance classes. He and I connected
                     because we would go and skateboard together. I found out that he was an artist as well.
                     We agreed to do an art trade. This is the one I made for him. Check out his page to 
@@ -64,7 +64,7 @@
             <h4>The Man: <em>Orange Ca 2021</em></h4>
             <h5><em>Acrylic on Canvas</em></h5>
         </div>
-            <img src="photos/man.jpg">
+            <img src="public/images/man.jpg">
                 <p class="characters-p">I was watching old wild boys videos and saw the episode where they went to Africa. 
                     It for sure gave me the inspiration to paint The Man and The Woman. 
                 </p>
@@ -73,7 +73,7 @@
              <h4>The Woman: <em>Orange Ca 2021</em></h4>
              <h5><em>Acrylic on canvas</em></h5>
         </div>
-            <img src="photos/woman.jpg">
+            <img src="public/images/woman.jpg">
                 <p class="characters-p">I think that this is one of my favorite paintings to date, I love everything 
                     about this one. From the eyelashes to the ear rings and neck rings. This colorful 
                     painting highlights the beauty of a trible African woman.
@@ -83,7 +83,7 @@
             <h4>The Grom: <em>Orange Ca 2021</em></h4>
             <h5><em>Acrylic on canvas</em></h5>
         </div>
-            <img src="photos/kid.jpg">
+            <img src="public/images/kid.jpg">
                 <p class="characters-p">To be honest this was supposed to be a bird but then ended up looking like 
                     a little grom, so I just went with it. Yewwww!
                 </p>
@@ -92,7 +92,7 @@
             <h4>White Claws and Chalk: <em>San Juan Capistrano Ca 2019</em></h4>
                 <h5><em>Chalk on chalk board</em></h5>
         </div>
-                <img src="photos/chalkboii.jpg">
+                <img src="public/images/chalkboii.jpg">
                     <p class="characters-p">Great story behind this one! I went to my buddy's party and it was a combo party,
                         my buddy Joey and his friends and his sister and her friends. The house was packed, 
                         were talkin 50-60 people there! Buddy was already buzz on and grabbed about 5 white 
@@ -107,7 +107,7 @@
             <h4>Munchie Fest give away: <em>Joshua Tree Ca 2020</em></h4>
             <h5><em>Acrylic on canvas</em></h5>
         </div>
-            <img src="photos/smoker.jpg">
+            <img src="public/images/smoker.jpg">
                 <p class="characters-p">This is a very interesting painting. There's a lot that went into this and its very special to me for a number of reasons.
                     First, I got invited to do a live painting for a music festival in Joshua Tree! I never really painted 
                     in front of anyone exact maybe my girlfriend or just a few of my buddies who stopped by the studio or what ever. 
