--- a/customapparel.html
+++ b/customapparel.html
@@ -3,11 +3,11 @@
         <Head>
             <title>Custom Apparel</title>
                 <meta charset="UTF-8">
-                <link rel="stylesheet" href="styles.css">
+                <link rel="stylesheet" href="public/styles/styles.css">
         </Head>
             <div class="header">
                 <a href="homepage.html">
-                    <img src="photos/Exxtra_Ranch_Logo.png"
+                    <img src="public/images/Exxtra_Ranch_Logo.png"
                     width="250" height="98">
                 </a>
                      <div class="navbar">
@@ -33,7 +33,7 @@
                 <h4>Custom teacher themed denim jacket:<em> Anaheim Ca 2021</em></h4>
                 <h5><em>Acrylic</em></h5>
             </div>
-                <img src="photos/sam-jacket.jpg">
+                <img src="public/images/sam-jacket.jpg">
                 <p class="customapparel-p"> MY girlfriend is a preschool teacher, and she wanted something that is school appropriate and fun and colorful.
                     I painted this and now everytime she goes out she gets complemented. I love it, keep an eye out for more to come! 
                 </p>
@@ -42,7 +42,7 @@
                 <h4>Character Wallet: <em>Anaheim Ca 2019</em></h4>
                 <h5><em>Paint Pens</em></h5>
             </div>
-                <img src="photos/wallet.jpg">
+                <img src="public/images/wallet.jpg">
                 <p class="customapparel-p"> I made this wallet for myself to touch up a blank what ever wallet. It ended up turning out sick!
                     Keep an eye out for all kinds of custom wallets. Anywhere from cheap wallets to designer wallets!
                 </p>
