--- a/homepage.html
+++ b/homepage.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
     <Html>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="public/styles/styles.css">
         <Head>
             <title>Wade Goodman Art</title>
 
             <div class="header">
                 <a href="homepage.html">
-                    <img src="photos/Exxtra_Ranch_Logo.png"
+                    <img src="public/images/Exxtra_Ranch_Logo.png"
                     width="250" height="98">
                 </a>             
                      <ul>
@@ -21,20 +21,20 @@
         </Head>
         <body>
             <div class="hpimg">
-            <img class="bigimg" src="photos/apna.jpeg">
+            <img class="bigimg" src="public/images/apna.jpeg">
             </div>
 
         <div class="hmpgcontainerone">
             <div class="hmpgimg">
-                <img src="photos/marc.jpg">
+                <img src="public/images/marc.jpg">
                 <div class="hmpgimgtext">Paintings, Paintings, Paintings</div>
             </div>
             <div class="hmpgimg">
-                <img src="photos/man.jpg">
+                <img src="public/images/man.jpg">
                 <div class="hmpgimgtext"> characters characters characters</div>
             </div>
             <div class="hmpgimg">
-                <img src="photos/sam-jacket.jpg">
+                <img src="public/images/sam-jacket.jpg">
                 <div class="hmpgimgtext">That producttttt doeeee</div>
             </div>
         </divumn>
