--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
         <Head>
             <title>Wade Goodman Art</title>
                 <meta charset="UTF-8">
-                <link rel="stylesheet" href="styles.css">
+                <link rel="stylesheet" href="public/styles/styles.css">
                 
         </Head>
 
         <body> 
             
             <div class="container">
-                <div class="intro_button">
-                    <a href="homepage.html" class="button">Lets Get Bob Ross!</a>
-                </div>
+                <a href="homepage.html" class="intro_button rainbowtext-animated">
+                    <span class="button rainbowtext-animated">Lets Get Bob Ross!</span>
+                </a>
             </div>
         </body>
     </Html>
