--- a/murals.html
+++ b/murals.html
@@ -3,11 +3,11 @@
         <Head>
             <title>Murals</title>
                 <meta charset="UTF-8">
-                <link rel="stylesheet" href="styles.css">
+                <link rel="stylesheet" href="public/styles/styles.css">
         </Head>
             <div class="header">
                 <a href="homepage.html">
-                    <img src="photos/Exxtra_Ranch_Logo.png"
+                    <img src="public/images/Exxtra_Ranch_Logo.png"
                     width="250" height="98">
                 </a>                
                 <div class="navbar">
@@ -33,7 +33,7 @@
                 <h4>APN company mural:<em>Anaheim Hills Ca 2020</em></h4>
                 <h5><em>Mixed Media</em></h5>
             </div>
-                <img src="photos/apna.jpeg">
+                <img src="public/images/apna.jpeg">
                 <p class="murals-p">I was working for this company Approved Providers Network and they were moving to a new office.
                     I asked if they would let me paint a big mural and they said yes! They wanted a call center vibe with phones
                     and money and sales happening. Everyone is happy and the making money! I drew some random characters and then had to 
@@ -48,7 +48,7 @@
                 <h4>Clients Master Bedroom: <em>Orange County Ca 2020</em></h4>
                 <h5><em>Mixed Media</em></h5>
             </div>
-                <img src="photos/artyboii.jpg">
+                <img src="public/images/artyboii.jpg">
                     <p class="murals-p">This was my first mural ever! My buddys dad really likes my art and wanted a full mural 
                         in his master bed room. He told me that he wanted a NY city 4th of July party vibe. I drew out an idea and 
                         he loved it. He was blown away and loves the mural.
