--- a/paintings.html
+++ b/paintings.html
@@ -3,11 +3,11 @@
         <Head>
             <title>Paintings</title>
                 <meta charset="UTF-8">
-                <link rel="stylesheet" href="styles.css">
+                <link rel="stylesheet" href="public/styles/styles.css">
         </Head>
             <div class="header">
                 <a href="homepage.html">
-                    <img src="photos/Exxtra_Ranch_Logo.png"
+                    <img src="public/images/Exxtra_Ranch_Logo.png"
                     width="250" height="98">
                 </a>               
                  <div class="navbar">
@@ -28,7 +28,7 @@
             <h4>Rising to The Top: <em> Long Beach CA 2019</em></h4>
             <h5><em>Mixed Media</em></h5>
         </div>
-                <img src="photos/marc.jpg">
+                <img src="public/images/marc.jpg">
                     <p class="paintings-p">Little backstory on this guy, I went over to my buddy's house to watch
                     the fights and I saw he had a bunch of spray paint in the barn/shed,
                     and I asked if he would let me paint a little somethin somethin. He said run it!
@@ -41,7 +41,7 @@
             <h4>Custom Mind Meetings: <em>Anaheim CA 2020</em></h4>
             <h5><em>Mixed Media</em></h5>
         </div>
-                <img src="photos/mind-meetings.jpg">
+                <img src="public/images/mind-meetings.jpg">
                  <p class="paintings-p">This is my favorite custom painting that I have done. One of my
                     good friends started a podcast (<a href="https://www.instagram.com/mindmeetings/" target="_blank">@mindmeetings</a>) and asked for a painting that would hang 
                     on the wall of his studio. I got back the guidelines and the idea of what he wanted, a month of painting
@@ -54,7 +54,7 @@
             <h4>Custom Exxtra Ranch Supply Company: <em>Anaheim CA 2021</em></h4>
             <h5><em>Acrylic</em></h5>
         </div>
-            <img src="photos/exxtraranch.jpg">
+            <img src="public/images/exxtraranch.jpg">
                 <p class="paintings-p">I started an surf/skate apparel company (<a href="https://www.instagram.com/exxtra.ranch/">@exxtra.ranch</a>) that takes my crazy art and turns it into 
                     awesome T-shirts! I had three BIG canvases just sitting in my art studio. I put them together and made this awesome painting. It took about 3 weeks and I love it! 
                     It's the main painting in my room right now!  
@@ -64,7 +64,7 @@
             <h4>Squad up: <em>Anaheim CA 2020</em></h4>
             <h5><em>Mixed Media</em></h5>
         </div>
-            <img src="photos/matt.jpg">
+            <img src="public/images/matt.jpg">
                 <p class="paintings-p">I moved into a house with my buddy, and we had to find a roommate to fill one of the rooms.
                     We found this dude Matt, and he ended up being super chill and one of the boys! He is really into street
                     art, so he liked my painting style. He had an open spot on his wall and I asked if I can paint something for him.
@@ -76,7 +76,7 @@
             <h4>Palm Springs Get Away: <em>Palm Springs CA 2021</em></h4>
             <h5><em>Mixed Media</em></h5>
         </div>
-            <img src="photos/frankk.jpg">
+            <img src="public/images/frankk.jpg">
                 <p class="paintings-p"> Frank reached out to me when he was redoing his Palm Springs home. He wanted a painting that will
                     be right next to the kitchen and above his poker table. He wanted very specific design and wanted to make sure the colors 
                     were right and that it included all the bells and whistles to make sure this painting will fit correctly with the style of
@@ -88,7 +88,7 @@
                 <h4>Alv-ero: <em>Anaheim CA 2020</em></h4>
                 <h5><em>Mixed Media</em></h5>
         </div>
-                <img src="photos/alv.jpg">
+                <img src="public/images/alv.jpg">
                     <p class="paintings-p"> My boiii Aldo moved in with the boys and wanted a painting for his room. He wanted abstract faces and beach themed 
                         but in my style and let me pretty much go bonkers with this one. I had a blast making this and low-key want it for my room lol. Its a MASSIVE
                         painting and it covers the whole wall above his bed. Little more simple than some of my others ones and I love it!    
